--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -59,6 +59,8 @@ services:
     depends_on:
       - database
       - redis
+    environment:
+      - WAPIKIT_FRONTEND_DIR=""
     volumes:
       - ../:/app
     networks:
