--- a/dev/config.toml
+++ b/dev/config.toml
@@ -15,7 +15,7 @@ encryption_key = "0123456789abcdef0123456789abcdef"
 # make sure you add the protocol as well, like https://wapikit.vercel.app, 
 # because this would be used for cors and other configurations
 # also, if in case the application api endpoint is used from another internal application of the Organization they can enable the API access via this option
-cors_allowed_origins = ["http://localhost:3000", "http://localhost:8000"]
+cors_allowed_origins = ["http://localhost:3000", "http://localhost:8000", "http://127.0.0.1:3000", "http://127.0.0.1:8000", "http://backend:8000", "http://frontend:3000"]
 
 # this flag to be true if in case you want to host the frontend separately from the backend,
 # like on vercel, so enabling this flag would skip on building and bundling of the frontend 
