--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   database:
     image: postgres:13
-    pull_policy: if-not-present
+    pull_policy: always
     ports:
       - "5432:5432"
     networks:
@@ -18,7 +18,7 @@ services:
 
   redis:
     image: redis:6
-    pull_policy: if-not-present
+    pull_policy: always
     ports:
       - "6379:6379"
     networks:
