--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "NODE_ENV=production next build",
-		"start": "NODE_ENV=production  next start",
+		"start": "next dev",
 		"lint": "next lint",
 		"codegen": "orval --config ./orval.config.ts",
 		"pretty": "pnpm prettier --write \"src/**/*.{ts,tsx,css}\""
