--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       context: ../
       dockerfile: dev/dev.Dockerfile
       no_cache: true
-    command: [ "make", "dev-backend-docker" ]
+    command: ["/bin/sh", "-c", "atlas migrate apply --env global --var DB_URL=$$DB_URL && WAPIKIT_CONFIG=/app/config.toml make dev-backend-docker"]
     ports:
       - "8000:8000"
       - "8081:8081"
@@ -64,8 +64,12 @@ services:
       - WAPIKIT_FRONTEND_DIR=""
       - WAPIKIT_environment=development
       - WAPIKIT_debug=true
+      - WAPIKIT_CONFIG=/app/config.toml
+      - DB_URL=postgres://wapikit-dev:wapikit-dev@database:5432/wapikit-dev?sslmode=disable
     volumes:
       - ../:/app
+      - ./config.toml:/app/config.toml:ro
+      - ../internal/database/migrations:/app/migrations
     networks:
       - wapikit-dev
 
